fix: ... dropwdown was overlapping the items on hover and unhover

--- a/webapp/src/components/ListPage/ListPage.module.css
+++ b/webapp/src/components/ListPage/ListPage.module.css
@@ -71,6 +71,7 @@
   justify-content: center;
   cursor: pointer;
   padding: 0;
+  z-index: 11;
 }
 
 .actions :global(.ui.button).iconContainer.share {
